<resources>
    <string name="app_name">Grocery</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="not_have_account_register">Not have account? Register</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="recover_password">Recover Password</string>
    <string name="recover">Recover</string>
    <string name="registerUser">Register User</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="register_seller">Register Seller</string>
    <string name="todo">TODO</string>
    <string name="shop_name">Shop Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="complete_address">Complete Address</string>
    <string name="name">Name</string>
    <string name="title_activity_add_product">AddProductActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_edit_product">EditProductActivity</string>
</resources>