<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".RegisterUserActivity">

    <!--    Toolbar-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/shape_rect01"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:src="@drawable/baseline_back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/registerUser"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iconIv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_circle01"
        android:padding="5dp"
        android:src="@drawable/key_white" />

    <com.blogspot.atifsoftwares.circularimageview.CircularImageView
        android:id="@+id/profileIv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/iconIv"
        android:layout_centerHorizontal="true"
        android:src="@drawable/person_grey"
        app:c_border="true"
        app:c_border_color="@color/colorPrimary"
        app:c_border_width="1dp" />

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileIv"
        android:layout_margin="5dp"
        android:background="@drawable/shape_rect02"
        android:drawableStart="@drawable/mail_icon_white_on_grey"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEt"
        android:layout_margin="5dp"
        android:background="@drawable/shape_rect02"
        android:drawableStart="@drawable/lock_grey"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />


    <EditText
        android:id="@+id/nameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEt"
        android:layout_margin="5dp"
        android:background="@drawable/shape_rect02"
        android:drawableStart="@drawable/mail_icon_white_on_grey"
        android:hint="@string/full_name"
        android:inputType="textPersonName|textCapWords"
        android:padding="10dp" />

    <EditText
        android:id="@+id/phoneEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameEt"
        android:layout_margin="5dp"
        android:background="@drawable/shape_rect02"
        android:drawableStart="@drawable/mail_icon_white_on_grey"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="10dp" />

    <LinearLayout
        android:layout_margin="5dp"
        android:layout_below="@+id/phoneEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/loginBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneEt"
        android:layout_centerHorizontal="true"
        android:width="120dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/noAccountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:text="Already have an account? Login" />
</RelativeLayout>